needed_on_adminws/k8s/my-deployment.yaml
# deploying on first cluster:
#   https://cloud.google.com/anthos/clusters/docs/on-prem/1.4/how-to/deploy-first-app?hl=he
# source for hello-app
#   https://github.com/GoogleCloudPlatform/kubernetes-engine-samples/tree/master/hello-app
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  selector:
    matchLabels:
      app: metrics
      department: sales
  replicas: 3
  template:
    metadata:
      labels:
        app: metrics
        department: sales
    spec:
      containers:
      - name: hello
        image: "gcr.io/google-samples/hello-app:2.0"
