needed_on_adminws/k8s/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: metrics
    department: sales
  type: LoadBalancer
  loadBalancerIP: 192.168.142.17 # any IP from user142 network that is unused
  ports:
  - port: 80 # port now provided by service
    targetPort: 8080 # port on pod
